<resources>
    <string name="app_name">EM</string>
    <string name="logo">Logo</string>
    <string name="expense">Expense</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="let_s_get_started">Lets get Started</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="EM">EM</string>
    <string name="Logout">Logout</string>
</resources>