<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!--Top logo and name-->
        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo"
                android:transitionName="logo"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/text_color"
                android:transitionName="logo_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
            <!--Name-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/no_background"
                    android:hint="@string/name"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/cursor" />
            </soup.neumorphism.NeumorphCardView>
            <!--Email-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/no_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/cursor" />
            </soup.neumorphism.NeumorphCardView>
            <!--Contact No-->
           <!-- <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_contactno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/no_background"
                    android:hint="@string/contact_no"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/cursor" />
            </soup.neumorphism.NeumorphCardView>-->
            <!--Password-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/no_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textCursorDrawable="@drawable/cursor" />
            </soup.neumorphism.NeumorphCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp">
                <!--Signup button-->
                <soup.neumorphism.NeumorphButton
                    android:id="@+id/register"
                    style="@style/Widget.Neumorph.Button"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/register"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
                <!--Signin button-->
                <soup.neumorphism.NeumorphButton
                    android:id="@+id/cancel"
                    style="@style/Widget.Neumorph.Button"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>